--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Todo" asp-action="Index">Add Task</a>
+                        <a class="nav-link" asp-area="" asp-controller="Todo" asp-action="Create">Add Task</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Todo" asp-action="GetTodos">View Tasks</a>
