--- a/Views/Todo/GetTodos.cshtml
+++ b/Views/Todo/GetTodos.cshtml
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="page-title">Todo List</h1>
-        <a asp-controller="Todo" asp-action="Index">
+        <a asp-controller="Todo" asp-action="Create">
             <button class="btn btn-gradient">+ Add</button>
         </a>
     </div>
