--- a/Views/Todo/GetTodos.cshtml
+++ b/Views/Todo/GetTodos.cshtml
@@ -25,14 +25,20 @@
             {
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="todo-card">
-                        <div class="todo-status">
-                            <input type="checkbox"
-                                   @(item.Status ? "checked" : "")
-                                   onchange="updateStatus(@item.Id, this)"
-                                   class="form-check-input me-2" />
-                            <span class="status-label @(item.Status ? "completed" : "pending")">
-                                @(item.Status ? "✔ Completed" : "● Pending")
-                            </span>
+                    <div class="todo-status">
+                        
+                             <input type="checkbox"
+                                       @(item.Status ? "checked" : "")
+                                       onchange="updateStatus(@item.Id, this)"
+                                       class="form-check-input me-2" />
+                             <a asp-controller="Todo" asp-action="TodoStatus" asp-route-id="@item.Id" >
+                             <span class="status-label @(item.Status ? "completed" : "pending")">
+                                 @(item.Status ? "✔ Completed" : "● Pending")
+                             </span>
+                             </a>
+                            
+                             
+                            
                         </div>
                         <div class="todo-details">
                             <h5 class="todo-title">@item.TaskTitle</h5>
@@ -47,6 +53,10 @@
                                asp-route-id="@item.Id"
                                onclick="return confirmDelete();"
                                class="btn btn-delete">Delete</a>
+                            <a asp-controller="Todo"
+                               asp-action="TodoStatus"
+                               asp-route-id="@item.Id"
+                               class="btn btn-delete">status</a>
                         </div>
                     </div>
                 </div>
@@ -58,6 +68,9 @@
 <script>
     function confirmDelete() {
         return confirm("Are you sure you want to delete this todo?");
+    }
+    function UpdateStatus(id) {
+        
     }
 </script>
 
